Bug 133953 - No more tooltip with measure value for row / column resize on Gnome GTK3
Summary: No more tooltip with measure value for row / column resize on Gnome GTK3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1 target:6.4.6
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-13 09:33 UTC by Xavier Guillot
Modified: 2020-06-14 09:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Calc column resize (68.67 KB, image/png)
2020-06-13 11:40 UTC, Xavier Guillot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Guillot 2020-06-13 09:33:39 UTC
Description:
Since many months and versions of LibreOffice, on Ubuntu and Calc program, I don't see anymore the bubble with the value when I resize a row or a column - which is very useful to set a specific size without having to open the (sub)-menu and write it on the window opened for row height or column width.

Steps to Reproduce:
Click with the mouse between 2 rows or columns to resize it

Actual Results:
No bubble appears as it was the case before

Expected Results:
A small bubble should be seen with the value of size, changing as we move the mouse.


Reproducible: Always


User Profile Reset: No



Additional Info:
It still works very fine and normally for LibreOffice 6.4 and 7.0 on Windows 10 and on  Debian 10 Buster with KDE Plasma 5.14 : bubble is shown.

On Ubuntu, if I use the generic backend - SAL_USE_VCLPLUGIN="gen" libreoffice - I don't have the default theme but this time, on Calc bubble is seen when resizing a row / column (tested on Ubuntu 20.04 and LO 6.4.3).

On Ubuntu 18.04 with LO 6.0 and backend GTK2, it works, too.

So this bug could be related to Gnome 3 and GTK3 because it doesn't work on Ubuntu with backend GTK3.

If it's a limitation of backend GTK3, is there a way to bypass it, or do I need to fill a bug upstream ?

Thanks !
Comment 1 Julien Nabet 2020-06-13 11:02:19 UTC
Would it be possible you attach an example file + 2 screenshots (1 ok, 1 ko)?
Comment 2 Xavier Guillot 2020-06-13 11:40:07 UTC
Created attachment 161949 [details]
LibreOffice Calc column resize

Here is the screenshot : on the left normal LibreOffice on Ubuntu 20.04 with Yaru dark theme (Gnome Shell + LO icons), no bubble seen on column resizing.

On the right, same computer but generic backend : bubble with value is here as expected
Comment 3 Julien Nabet 2020-06-13 11:51:25 UTC
Thank you for your feedback. I thought it was about bubble charts but you meant "tooltip".
On pc Debian x86-64 with master sources updated today, I could reproduce this with "gtk3" rendering not with "gen" or "kf5" rendering.
Comment 4 Julien Nabet 2020-06-13 11:53:19 UTC
Caolán: thought you might be interested in this one since it's gtk3 specific.

I don't at which version it began so put master for the moment.
Comment 5 Caolán McNamara 2020-06-13 13:09:18 UTC
That might happen if the tooltip points to an area with 0 width or height so it might be an easy enough fix
Comment 6 Caolán McNamara 2020-06-13 13:35:23 UTC
I think a popover is needed instead for this interaction under gtk: https://gerrit.libreoffice.org/c/core/+/96255
Comment 7 Commit Notification 2020-06-13 14:33:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9debed4ca680706da74824f7d46198ac0e422f80

tdf#133953 use a popover to show interactive row/column resize into

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-06-13 16:14:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/68535d0f9100e83d644175695d470c33eda6fb0b

tdf#133953 use a popover to show interactive row/column resize into

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2020-06-13 16:15:02 UTC
fixed in master and 7-0, backport to 6-4 in gerrit
Comment 10 Jean-Baptiste Faure 2020-06-13 18:20:13 UTC
Verified fixed on Version: 7.0.0.0.beta1+
Build ID: 68535d0f9100e83d644175695d470c33eda6fb0b
Threads CPU : 4; OS : Linux 4.15; UI Render : par défaut; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Ubuntu_18.04_x86-64
Calc: threaded

Thank you very much for this so quick fix.

Best regards. JBF
Comment 11 Commit Notification 2020-06-14 09:33:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/2a88edb1e102373620f5ca06900f1104f253a6f9

tdf#133953 use a popover to show interactive row/column resize into

It will be available in 6.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.