tdf#133953 use a popover to show interactive row/column resize into

because a simple tooltip won't fire under gtk for that interaction

Change-Id: I487b5c05805e3d0233da9a3b3c5ff1912d98baf6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96274
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>